# libuseful

./: .gitignore  LICENSE  README.md  meson.build
debug/: .ninja_deps  .ninja_log  build.ninja  (+1 more)
doc/: Doxyfile  Doxyfile.in  DoxygenLayout.xml  gendocs.sh  meson.build
doc/examples/: arrays  arrays.c  arrays.out  eg1.csv  readcsv  readcsv.c  readcsv.out
doc/html/: algorithms_8h.html  algorithms_8h_source.html  annotated.html  array_8c.html  array_8h.html  array_8h_source.html  check_8h.html  check_8h_source.html  classes.html  config_8h_source.html  csv_8c.html  csv_8h.html  csv_8h_source.html  dir_02f5328d12d0b5c738d474b70792f48f.html  dir_10897806b03f402452ebe667ba4b4541.html  dir_3ddda1ba4a1a7248fdb752f683f41755.html  dir_3e1154c7cbd0aea8a0a77c36fc2deca3.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_585c759924e1bc1d3539609319f21288.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_60c1500f5fe42aeafa441e59cc23c65e.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_687bdf86e8e626c2168c3a2d1c125116.html  dir_84d4ec99856759213102e4209c09c524.html  dir_93598ca166e67dcc8cf3dfff647b911b.html  dir_937181b4921222f406a8e76e4fc53720.html  dir_9864e4d413a9b0591ac1719fbc630f17.html  dir_9a19e62f5fb4eb5b3e2c6a1aa8070ada.html  dir_9c8c494a5e1ae1f33037b0e9d49f06c7.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  graph_legend.html  index.html  md__home_nathan_workspace_C_useful_README.html  md__home_nathan_workspace__c_useful__r_e_a_d_m_e.html  menudata.js  pages.html  (+19 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+3 more)
src/: algorithms.c  array.c  config.h  config.h.in  csv.c  meson.build  string.c  test.c  tests.c  useful.h
src/useful/: algorithms.h  array.h  check.h  csv.h  string.h  test.h
(+8 files in other folders)
