# Install docs

install_subdir('html',  install_dir : join_paths(get_option('datadir'), 'doc',
                                                 'useful'))
install_subdir('examples',  install_dir : join_paths(get_option('datadir'), 'doc',
                                                     'useful'))
